@@ -2244,7 +2244,7 @@ void update_prim_emfield_mem_in_zone_4(np_t *np, gl_t *gl, long theta, long ls, 
   long i,j,k;
   double *coeff;
 
-  coeff=(double *)malloc(150*sizeof(double));
+  coeff=(double *)malloc(powint(tsemfcoeffhbw*2+1,3)*sizeof(double));
   for (l=ls; l!=_l_plus_one(le,gl,theta); l=_l_plus_one(l,gl,theta)){
     if (is_node_inner(np[l],TYPELEVEL_EMFIELD)){ 
       for (flux=0; flux<nfe; flux++){
